--- a/ajax.html
+++ b/ajax.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Meu Github</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -27,11 +29,11 @@
                     <span id="following"></span>
                 </li>
             </ul>
-            <a href="#" class="profile-link">Ver no Github</a>
+            <a href="https://api.github.com/users/engenheirafrontendbianca" class="profile-link">Ver no Github</a>
         </div>
     </header>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             const nameElement = document.querySelector('#name');
             const usernameElement = document.querySelector('#username');
             const avatarElement = document.querySelector('#avatar');
@@ -39,23 +41,24 @@
             const followersElement = document.querySelector('#followers');
             const followingElement = document.querySelector('#following');
             const linkElement = document.querySelector('#link');
-        
-        fetch('https://api.github.com/users/engenheirafrontendbianca')
-           .then(function(res) {
-        return res.json();
-        })
 
-        .then(function(json) {
-            nameElement.innerText = json.name;
-            usernameElement.innerText = json.login;
-            avatarElement.src = json.avatar_url;
-            followingElement.innerText = json.following;
-            followersElement.innerText = json.followers;
-            repos.innerText = json.public_repos;
-            linkElement.href = json.html_url;
+            fetch('https://api.github.com/users/engenheirafrontendbianca')
+                .then(function (res) {
+                    return res.json();
+                })
+
+                .then(function (json) {
+                    nameElement.innerText = json.name;
+                    usernameElement.innerText = json.login;
+                    avatarElement.src = json.avatar_url;
+                    followingElement.innerText = json.following;
+                    followersElement.innerText = json.followers;
+                    repos.innerText = json.public_repos;
+                    linkElement.href = json.html_url;
+                })
         })
-        })
-        </script>
-        
+    </script>
+
 </body>
+
 </html>
