--- a/ajax.html
+++ b/ajax.html
@@ -29,7 +29,7 @@
                     <span id="following"></span>
                 </li>
             </ul>
-            <a href="https://api.github.com/users/engenheirafrontendbianca" class="profile-link">Ver no Github</a>
+            <a href="https://api.github.com/users/engenheirafrontendbianca" id="link" class="profile-link">Ver no Github</a>
         </div>
     </header>
     <script>
